--- a/wxcloudrun/templates/index.html
+++ b/wxcloudrun/templates/index.html
@@ -82,7 +82,7 @@
             class="btn btn-outline-success btn-lg count-button"
             style="background: rgba(0,0,0,0.03); color: #07C160; border: 0;"
             onclick="set('clear')"
-            >清零</a
+            >血染钟楼</a
           >
         </div>
         <small
