--- a/wxcloudrun/templates/index.html
+++ b/wxcloudrun/templates/index.html
@@ -15,7 +15,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <title>欢迎使用微信云托管</title>
+    <title>血染钟楼角色生成器</title>
     <style>
       .title-logo {
         height: 80px;
@@ -68,32 +68,31 @@
           class="title-logo"
           src="https://static-index-4gtuqm3bfa95c963-1304825656.tcloudbaseapp.com/official-website/favicon.svg"
         />
-        <h1 style="display: inline; margin-bottom: 48px;">欢迎使用微信云托管</h1>
+        <h1 style="display: inline; margin-bottom: 48px;">血染钟楼角色生成器</h1>
       </div>
       <div style="text-align: center">
-        <p class="count-text">当前计数：<span class="count-number"></span></p>
+      <form method="post">
+            模组: <input type="text" name="Mod" value="灾祸滋生" disabled="disabled" $style="background:#CCCCCC"><br>
+            人数: <input type="text" name="NumPlayer" value="10"><br>
+            <input type="submit" class="btn btn-success btn-lg count-button" value="确认" style="background: #07C160; border: 0;" onclick="set('confirm')">
+      </form>
         <div
           style="display: flex; justify-content: center; margin-bottom: 80px"
         >
-          <a class="btn btn-success btn-lg count-button" style="background: #07C160; border: 0;" onclick="set('inc')"
-            >计数+1</a
-          >
-          <a
-            class="btn btn-outline-success btn-lg count-button"
-            style="background: rgba(0,0,0,0.03); color: #07C160; border: 0;"
-            onclick="set('clear')"
-            >血染钟楼</a
-          >
         </div>
         <small
           class="text-black-50"
           style="display: flex; justify-content: center; margin-bottom: 16px"
-          >扫码加入微信云托管用户群</small
+          >生成结果</small
         >
-        <img
-          class="qrcode middle"
-          src="https://qcloudimg.tencent-cloud.cn/raw/89b46988d3cd73d8a56e76a1b82bb377.png"
-        />
+        <table>
+            {% for i, j in results %}
+              <tr>
+                  <th>{{i}}<th>
+                  <td>{{j}}</td>
+              </tr>
+            {% endfor %}
+        </table>
       </div>
     </div>
   </body>
