--- a/wxcloudrun/templates/index.html
+++ b/wxcloudrun/templates/index.html
@@ -85,12 +85,9 @@
           >你的</small
         >
         <table>
-            {% for i, j in results %}
               <tr>
-                  <th>{{i}}<th>
-                  <td>{{j}}</td>
+                  <th>{rep_text}<th>
               </tr>
-            {% endfor %}
         </table>
       </div>
     </div>
